--- a/wizard/wizard101worlds.html
+++ b/wizard/wizard101worlds.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="css/style.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Wizard 101 Schools</title>   
+        <title>Wizard 101 Worlds</title>   
         </head>
         <nav>
             <body>
@@ -17,7 +17,7 @@
          height= "400">
 
         <section id="Info">
-            <h2>Schools</h2>
+            <h2>Worlds</h2>
             <ul>
                 <li> There are many worlds you can go to on Wizard101! As you increase in levels, more worlds will open to you. There are sixteen worlds available to explore. Click the link below to learn more!
 
