--- a/marketing/index.html
+++ b/marketing/index.html
@@ -13,4 +13,4 @@
             <body>
             <h1>Why You Should Download Wizard101</h1>
               <p>Please Click The Link Below!</p>
-                  <p><a href="https://evmwill.github.io/wizard/wizard101isawesome.html">My Site></a></p>
+                  <p><a href="https://evmwill.github.io/wizard/wizard101isawesome.html">My Site</a></p>
